--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@
     margin-bottom: 20px;
 }
 .rub__transition {
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     border-radius: 8px;
@@ -91,7 +91,7 @@
 }
 
 .usd__transition {
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     border-radius: 8px;
